# PowerCapCursor

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  build.sh  docker-compose.yml  prod.env  pyproject.toml  requirements.txt  test.env
celery_app/: README.md  __init__.py  celery_config.py  task_registry.py
celery_app/tasks/: __init__.py  base_task.py  core_tasks.py  scheduled_tasks.py
celery_app/utils/: redis_conn.py  task_utils.py
config/: README.md  __init__.py  base_config.py  celery.py  env_config.py  log.py  log_config.py  redis.py  redis_config.py  settings.py
powercap_api/api/v1/: __init__.py  status_api.py  task_api.py
powercap_api/core/: __init__.py  config.py
powercap_api/models/: task_schemas.py
tests/: test_api.py  test_tasks.py
utils/: redis_client.py
