[project]
name = "powercap-fastapi"
version = "0.1.0"
description = "An asynchronous task management system based on FastAPI and Celery"
authors = [{ name = "PowerCap Team" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true 